com/secret-manager-get-file/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wsi
  name: deployment-product
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-product
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-product
        wsi/version: v1
        fargate: "true"
    spec:
      serviceAccountName: pod-role
      containers:
      - image: 654654635343.dkr.ecr.ap-northeast-2.amazonaws.com/wsi-product:latest
        imagePullPolicy: Always
        name: app-product
        securityContext:
          runAsUser: 2000
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "50Mi"
            cpu: "100m"
