com/secret-manager-get-file/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wsi
  name: service-product
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-product
